[gd_scene load_steps=10 format=2]

[ext_resource path="res://OQ_Toolkit/OQ_UI2D/theme/Roboto-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scene/ui/titlescreen.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=1]
size = 54
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.101961, 0.101961, 0.101961, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.101961, 0.101961, 0.101961, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFont" id=6]
size = 120
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 62
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[node name="Titlescreen" type="Control"]
margin_right = 1445.0
margin_bottom = 906.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screen1" type="Control" parent="MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 1430.0
margin_bottom = 891.0

[node name="Screen1" type="GridContainer" parent="MarginContainer/Screen1"]
margin_top = 200.0
margin_right = 1415.0
margin_bottom = 876.0
custom_constants/vseparation = 0
custom_constants/hseparation = 25
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayBtn" type="Button" parent="MarginContainer/Screen1/Screen1"]
margin_right = 695.0
margin_bottom = 676.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "PLAY"

[node name="ExitBtn" type="Button" parent="MarginContainer/Screen1/Screen1"]
margin_left = 720.0
margin_right = 1415.0
margin_bottom = 676.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "QUIT"

[node name="Label" type="Label" parent="MarginContainer/Screen1"]
anchor_right = 1.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 6 )
text = "BOXDAY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/Screen1/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -279.0
margin_top = -27.0
margin_right = 279.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 7 )
text = "HAPPY HOLIDAYS!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screen2" type="GridContainer" parent="MarginContainer"]
visible = false
margin_left = 15.0
margin_top = 15.0
margin_right = 1430.0
margin_bottom = 891.0
custom_constants/vseparation = 25
custom_constants/hseparation = 25
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EasyBtn" type="Button" parent="MarginContainer/Screen2"]
margin_right = 455.0
margin_bottom = 786.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "EASY"

[node name="Label" type="Label" parent="MarginContainer/Screen2/EasyBtn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.5
margin_top = 59.0
margin_right = 204.5
margin_bottom = 367.0
custom_fonts/font = SubResource( 5 )
text = "+ Slowest speed
+ Speed increases with time
+ Same color boxes spawn at the same location each time

+ Random trash boxes will spawn

+ Recommend difficulty to start"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MediumBtn" type="Button" parent="MarginContainer/Screen2"]
margin_left = 480.0
margin_right = 935.0
margin_bottom = 786.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "MEDIUM"

[node name="Label" type="Label" parent="MarginContainer/Screen2/MediumBtn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.5
margin_top = 59.0
margin_right = 204.5
margin_bottom = 367.0
custom_fonts/font = SubResource( 5 )
text = "+ Medium speed
+ Speed increases with time
+ Boxes spawn with random colors

Random trash boxes will spawn"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HardBtn" type="Button" parent="MarginContainer/Screen2"]
margin_left = 960.0
margin_right = 1415.0
margin_bottom = 786.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "HARD"

[node name="Label" type="Label" parent="MarginContainer/Screen2/HardBtn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.5
margin_top = 59.0
margin_right = 204.5
margin_bottom = 367.0
custom_fonts/font = SubResource( 5 )
text = "+ Max  speed
+ Speed increases with time
+ Boxes spawn with random colors

+ Random trash boxes will spawn"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBtn" type="Button" parent="MarginContainer/Screen2"]
margin_top = 811.0
margin_right = 455.0
margin_bottom = 876.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "BACK"

[connection signal="pressed" from="MarginContainer/Screen1/Screen1/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="MarginContainer/Screen1/Screen1/ExitBtn" to="." method="_on_ExitBtn_pressed"]
[connection signal="pressed" from="MarginContainer/Screen2/EasyBtn" to="." method="_on_EasyBtn_pressed"]
[connection signal="pressed" from="MarginContainer/Screen2/MediumBtn" to="." method="_on_MediumBtn_pressed"]
[connection signal="pressed" from="MarginContainer/Screen2/HardBtn" to="." method="_on_HardBtn_pressed"]
[connection signal="pressed" from="MarginContainer/Screen2/BackBtn" to="." method="_on_BackBtn_pressed"]
